[package]
name = "nixpkgs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.18"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.163", features = ["serde_derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["full"] }
